# piec

./: .gitignore  .mailmap  CITATION.cff  README.md  conftest.py  docreqs.txt  paper.bib  paper.md  pyproject.toml  setup.cfg
.github/workflows/: build-paper.yml  tests.yml
Measurements/: example_hysteresis.ipynb
Measurements/AMR/: AMR_testing.ipynb  amr_GUI.py  amr_measurement.md
Measurements/DCIV/: IV_sweep_GUI.py  IV_sweep_testing.ipynb  dciv_measurement.md
Measurements/Ferroelectric Testing/: FE_testing.ipynb  FE_testing_GUI.py  example_hysteresis.ipynb  fe_measurement.md
Miscellaneous/: Ultrapulser_control.ipynb  testing.ipynb
docs/: requirements.txt
docs/source/: api_reference.rst  conf.py  index.rst  notebook_examples.rst  source_code_overview.rst  supported_instruments.rst
docs/source/_static/: custom.css
docs/source/administrative/: authors.rst  changelog.rst  code_of_conduct.rst  license.rst
docs/source/api_generated/: piec.analysis.hysteresis.rst  piec.analysis.pund.rst  piec.analysis.rst  piec.analysis.utilities.rst  piec.drivers.autodetect.rst  piec.drivers.awg.agilent_33220a.rst  piec.drivers.awg.agilent_33500.rst  piec.drivers.awg.awg.rst  piec.drivers.awg.k_81150a.rst  piec.drivers.awg.rigol_dg1000.rst  piec.drivers.awg.rigol_dg4000.rst  piec.drivers.awg.rst  piec.drivers.awg.sdg2000.rst  piec.drivers.daq.daq.rst  piec.drivers.daq.mccdig.rst  piec.drivers.daq.rst  piec.drivers.dc_callibrator.dc_callibrator.rst  (+57 more)
src/piec/: natty_style.mplstyle
tests/: test_imports.py  test_instrument_core.py  test_measurement_pipeline.py
(+82 files in other folders)
